# ml-template

./: .env.template  .gitignore  conf.yml  cookiecutter.json  env.yml  makefile  requirements.txt  setup.py
.github/workflows/: static.yml
docs/: blog-post.html  index.html  index.qmd
src/name/: __init__.py
{{cookiecutter.directory_name}}/: .editorconfig  .pre-commit-config.yaml  env.yml  makefile  pyproject.toml  setup.py
{{cookiecutter.directory_name}}/.github/workflows/: static.yml  workflows.yml
{{cookiecutter.directory_name}}/docs/: index.qmd
{{cookiecutter.directory_name}}/notebooks/: .template.ipynb
{{cookiecutter.directory_name}}/src/{{cookiecutter.short_name}}/: __init__.py
